# corona-royale

./: .gitattributes  .gitignore  CMakeLists.txt  CoronaRoyale.code-workspace  README.md
src/: collision.c  collisionborder.c  collison.h  collisonborder.h  data.h  events.c  events.h  main.c  main.h  network.c  network.h  player.c  player.h  rectangle.c
src/client/: audio.c  audio.cpp  audio.h  collision.c  collision.h  events.c  events.h  fonts.c  fonts.h  game.c  game.cpp  game.h  gamenet.c  gamenet.h  main.c  main.h  menu.c  menu.h  mouse.c  mouse.h  mouseInput.c  mouseInput.h  netplayer.c  netplayer.h  player.c  player.h  texture.c  texture.h  textures.c  textures.h  timer.c  timer.h
src/server/: main.c  netplayer.c  netplayer.h  server.c  server.h
src/shared/: data.c  data.h  hashtable.h  log.h  math.h  memory.h  netevent.c  netevent.h  network.c  network.h
tools/: build-clang.bat  build-macos.sh  build-vs2017.bat  build-vs2019.bat  gen-xcode.sh
